# PIGLasso

./: .env.template  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DATA.md  LICENSE  README.md  next.txt  pyproject.toml  requirements.txt
.github/workflows/: test.yml
examples/: make_small_example.py  run_small_example.sh  synthetic_run.py
examples/data/small_example/: adjacency.csv  delta.tsv  expression.tsv  genes.txt  stability.csv
jobs/: build_prior.job  piglasso_burns.job  piglasso_diffusion.job  piglasso_dream5.job  piglasso_synth_n513p164.job  piglasso_synthetic.job  prior_step1.job  prior_step2a.job  prior_step2b.job  prior_step2c.job  prior_step3.job  prior_step4.job  submit_prior_chain.sh
jobs/hpc_scripts/: preprocess_burn.sh  run_diff.sh  run_diff_sig.sh  run_inf.sh  run_knockout.sh  run_pig.sh  run_pig_final.sh  run_pig_new.sh  run_pig_prior.sh
methodtotest/BurnInjuries-main/BurnInjuries-main/: .RData  .Rhistory  .gitignore  hpc_sync.sh  notes.txt  requirements.txt  todo.txt
methodtotest/BurnInjuries-main/BurnInjuries-main/archive/: filter_burn.py  gene_subset.py  inspect_burn.py  network_chars.ipynb  pca_burn.py  pca_phaseburn.py  preprocess_burn.py  preprocess_chronic.ipynb  preprocess_trauma.py  run_piglasso.py
methodtotest/BurnInjuries-main/BurnInjuries-main/benchmarking/: benchmark_Dream5.ipynb  benchmark_GRN.ipynb  benchmark_SGG.ipynb
methodtotest/BurnInjuries-main/BurnInjuries-main/chronic_data/: latent_var_cohort1.csv  latent_var_cohort2.csv
methodtotest/BurnInjuries-main/BurnInjuries-main/hpc_scripts/: run_diff.sh  run_diff_sig.sh  run_inf.sh  run_pig_final.sh
methodtotest/BurnInjuries-main/BurnInjuries-main/inference/: glasso_installation.py  piglasso_core.py
methodtotest/BurnInjuries-main/BurnInjuries-main/knockouts/: node_knockout.py
methodtotest/BurnInjuries-main/BurnInjuries-main/plotting/: heatmap_burn.R  heatmap_burnTime.R  notes.txt  process_burn.py
methodtotest/prior/: genes.txt
piglasso/: __init__.py  cli.py
pipeline_src/: build_prior.py
pipeline_src/diffusion/: diffusion_signal.py  network_diffusion.py  plot_diffusion.py
pipeline_src/inference/: network_inference.py  piglasso_core.py  plot_piglasso_results.py  run_piglasso_new.py
pipeline_src/inference/plotting/: plot_piglasso_results.py
pipeline_src/knockouts/: plot_knockouts.py
pipeline_src/pathways/: annotate_genes.R  run_gsea.R  run_gsea_delta.R
pipeline_src/pathways/crossref/: crossref_knockouts_pathways.R  plot_crossref.R
pipeline_src/pathways/crossref/results/: knockout_pathway_crossref.csv  knockout_pathway_summary.csv
pipeline_src/preprocessing/burn_control/: preprocess_burn_control.ipynb
results/knockouts/: ranked_genes_with_modules.csv
scripts/: filter_top_genes.py  hub_analysis_burns.py  prepare_data.py  prepare_gse182616.py  prepare_gse236713.py
tests/: conftest.py  test_jobs.py  test_piglasso.py  test_pipeline_diffusion.py  test_scripts.py
(+17 files in other folders)
