[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piglasso"
version = "0.1.0"
description = "Prior-Informed Graphical Lasso for transcriptomics network inference"
license = { text = "MIT" }
authors = [
    { name = "Roland V. Bumbuc" },
]
requires-python = ">=3.10"
dependencies = [
    "nodis",
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
    "networkx>=3.1",
    "click>=8.1",
    "joblib>=1.3",
    "matplotlib>=3.7",
    "requests>=2.28",
]

[project.optional-dependencies]
r = ["rpy2>=3.5"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
piglasso = "piglasso.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["piglasso*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
