[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piglasso"
version = "0.1.0"
description = "Prior-Informed Graphical Lasso for transcriptomics network inference"
license = { text = "MIT" }
authors = [
    { name = "Roland V. Bumbuc", email = "rbumbuc@gmail.com" },
    { name = "Marcello Baryllii" },
    { name = "Zoe Azra Blei" },
]
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "graphical-lasso",
    "gaussian-graphical-models",
    "stability-selection",
    "transcriptomics",
    "gene-coexpression-networks",
    "burn-injury",
    "biological-priors",
    "network-inference",
    "bioinformatics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: OS Independent",
]

dependencies = [
    "nodis",
    "gglasso>=0.2",
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
    "networkx>=3.1",
    "click>=8.1",
    "joblib>=1.3",
    "matplotlib>=3.7",
    "requests>=2.28",
    "tqdm>=4.64",
]

[project.urls]
Homepage = "https://github.com/youwillfindinfinity/piglasso"
Repository = "https://github.com/youwillfindinfinity/piglasso"
"Bug Tracker" = "https://github.com/youwillfindinfinity/piglasso/issues"
Changelog = "https://github.com/youwillfindinfinity/piglasso/blob/master/CHANGELOG.md"

[project.optional-dependencies]
r = ["rpy2>=3.5"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
piglasso = "piglasso.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["piglasso*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
